Fixing disqus section overflow bug

--- a/css/index.css
+++ b/css/index.css
@@ -63,7 +63,6 @@ of those sections to manage the look and feel of the site. */
 }
 
 .contact-section {
-    height: 85%;
     padding-top: 150px;
     text-align: center;
     background: url(../resources/bg.jpg) no-repeat center center fixed;
@@ -105,6 +104,9 @@ a#guide-blog{
 }
 .navbar li:hover{
     background-color: #bbb;
+}
+.contact-section .container {
+    padding-bottom: 50px;
 }
 #footer-social-links li:hover{
     border-bottom: solid 2px #555;
